# algoritmos-e-estrutura-de-dados

./: .gitignore  AGENTS.md  CMakeLists.txt  MEMORY.md  README.md  main.c
.claude/: settings.local.json
.context/: project.md  rules.md  tech.md
.itzamna/: MEMORY_PROTOCOL.md  memory.md
.itzamna/templates/: cli-compatibility.md  quality-checklist.md  skill-template.md
.opencode/: AGENTS.md
.opencode/command/: itzamna.init.md  itzamna.status.md
docs/: ALGORITHM_CATALOG.md  DATA_STRUCTURE_GUIDE.md  IMPLEMENTATION_PLAN.md  PROJECT_ROADMAP.md  USAGE_EXAMPLES.md
docs/references/: ESSENTIAL_DATA_STRUCTURES.md
examples/: usage_examples.c
include/algorithms/: backtracking.h  divide_conquer.h  dynamic_programming.h  graph_algorithms.h  greedy.h  numerical.h  searching.h  sorting.h  string_matching.h
include/data_structures/: array_list.h  avl_tree.h  binary_tree.h  bst.h  common.h  graph.h  hash_table.h  heap.h  linked_list.h  priority_queue.h  queue.h  stack.h  trie.h  union_find.h
include/optimization/: common.h
include/optimization/benchmarks/: continuous.h  tsp.h
include/optimization/heuristics/: hill_climbing.h
include/optimization/metaheuristics/: aco.h  differential_evolution.h  genetic_algorithm.h  grasp.h  ils.h  lns.h  memetic.h  pso.h  simulated_annealing.h  tabu_search.h  vns.h
src/algorithms/: backtracking.c  divide_conquer.c  dynamic_programming.c  graph_algorithms.c  greedy.c  numerical.c  searching.c  sorting.c  string_matching.c
src/data_structures/: array_list.c  avl_tree.c  binary_tree.c  bst.c  common.c  graph.c  hash_table.c  heap.c  linked_list.c  priority_queue.c  queue.c  stack.c  trie.c  union_find.c
src/optimization/: common.c
src/optimization/benchmarks/: continuous.c  tsp.c
src/optimization/heuristics/: hill_climbing.c
src/optimization/metaheuristics/: aco.c  differential_evolution.c  genetic_algorithm.c  grasp.c  ils.c  lns.c  memetic.c  pso.c  simulated_annealing.c  tabu_search.c  vns.c
tests/: test_macros.h
tests/algorithms/: test_backtracking.c  test_divide_conquer.c  test_dynamic_programming.c  test_graph_algorithms.c  test_greedy.c  test_numerical.c  test_searching.c  test_sorting.c  test_string_matching.c
tests/data_structures/: test_array_list.c  test_avl_tree.c  test_binary_tree.c  test_bst.c  test_common.c  test_graph.c  test_hash_table.c  test_heap.c  test_linked_list.c  test_priority_queue.c  test_queue.c  test_stack.c  test_trie.c  test_union_find.c
tests/optimization/: test_aco.c  test_benchmarks.c  test_differential_evolution.c  test_genetic_algorithm.c  test_grasp.c  test_hill_climbing.c  test_ils.c  test_lns.c  test_memetic.c  test_pso.c  test_simulated_annealing.c  test_tabu_search.c  test_vns.c
